# odoo-bringout-stock_mts_mto_rule_mrp

./: README.md  pyproject.toml
doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
stock_mts_mto_rule_mrp/: __manifest__.py
stock_mts_mto_rule_mrp/docs/: PROCUREMENT_MTS_MTO_SPECIFICATION.md
stock_mts_mto_rule_mrp/i18n/: bs.po  stock_mts_mto_rule_mrp.pot
stock_mts_mto_rule_mrp/models/: __init__.py  stock_rule.py  stock_warehouse.py
stock_mts_mto_rule_mrp/views/: stock_warehouse_views.xml
